--- a/src/styles/components/_components_game.scss
+++ b/src/styles/components/_components_game.scss
@@ -7,6 +7,11 @@
     color: white;
     box-shadow: -1px 2px 6px 3px rgba(192, 202, 218, 0.9);
   }
+  &__search {
+    margin-left: 50px;
+    width: 200px;
+    border-radius: 50px;
+  }
 }
 
 .game-card {
